Implemented banner section

--- a/index.html
+++ b/index.html
@@ -25,12 +25,31 @@
         </div>
         <div class="hidden md:block">
             <nav class="flex items-center justify-center gap-3 lg:gap-14">
-                <img src="./images/charm-menu-staff-students.svg" class="w-14 lg:w-44 cursor-pointer duration-200">
-                <img src="./images/charm-menu-search.svg" class="w-14 lg:w-24 cursor-pointer duration-200">
-                <img src="./images/charm-menu.svg" class="w-14 lg:w-20 cursor-pointer duration-200">
+                <img src="./images/charm-menu-staff-students.svg" class="w-14 md:w-44 cursor-pointer duration-200">
+                <img src="./images/charm-menu-search.svg" class="w-14 md:w-24 cursor-pointer duration-200">
+                <img src="./images/charm-menu.svg" class="w-14 md:w-20 cursor-pointer duration-200">
             </nav>
         </div>
     </section>
+
+    <section class="relative w-full h-[100vh] bg-orange-600">
+        <div class="absolute top-10 left-5 md:top-32 md:left-40">
+            <div class="w-[50px] h-1 bg-white mb-6"></div>
+            <h1 class="font-bold text-white font-bannerFont text-3xl md:text-6xl pb-4">
+                Dynamic <br> learning, <br>
+                <span class="font-medium">distinctive <br> experience</span>
+            </h1>
+            <button class="mt-3 py-2 px-3 text-sm md:text-md md:py-4 md:px-7 bg-white  border-b-4 border-black cursor-pointer">Find out more obout postgraduate study</button>
+        </div>
+        <div class="relative w-full flex flex-col md:flex-row items-center justify-between h-full">
+            <div class="relative">
+                <img src="./images/banner-outline.png" class="relative w-full">
+            </div>
+            <img src="./images/banner-img.jpeg" class="w-4/5 h-[200px] md:w-1/2 relative top-[-100px] md:top-0 md:h-full object-cover object-center">
+        </div>
+    </section>
+
+    
     
 </body>
 </html>
