Implemented scholaship section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
-<body class="max-w-[1440px] mx-auto">
+<body class="max-w-[1440px] mx-auto bg-gray-100">
 
     <section class="flex items-center justify-between px-3 py-4 md:px-10 md:py-10 lg:px-16 lg:py-6">
         <img src="./images/logo.svg" class="w-24 md:w-32 lg:w-44">
@@ -32,7 +32,7 @@
         </div>
     </section>
 
-    <section class="relative w-full h-[100vh] bg-orange-600">
+    <section class="relative w-full h-[600px] bg-orange-600">
         <div class="absolute top-10 left-5 md:top-32 md:left-40">
             <div class="w-[50px] h-1 bg-white mb-6"></div>
             <h1 class="font-bold text-white font-bannerFont text-3xl md:text-6xl pb-4">
@@ -49,7 +49,58 @@
         </div>
     </section>
 
-    
+    <section class="md:px-16 md:py-10 flex flex-col md:flex-row items-start">
+        <div class="relative flex flex-col items-center">
+            <img src="./images/student1.jpeg" class="md:w-[550px] md:h-[400px] object-cover object-center cursor-pointer">
+            <div class="p-7 flex flex-col items-center justify-between bg-white relative top-[-30px] w-[450px] h-[260px]">
+                <div class="text-center">
+                    <h2 class="font-semibold text-2xl pb-5">Live like a local</h2>
+                    <p class="text-center text-md pb-4">Find out more life in our campus, including accomodation information and local area hint and tips.</p>
+                </div>
+                <div class="relative w-full flex items-center justify-between px-3 py-2 border-t border-black">
+                    <a href="#" class="text-sm text-blue-500">Discover more about life on campus</a>
+                    <i class="uil uil-arrow-right cursor-pointer text-2xl"></i>
+                </div>
+            </div>
+        </div>
+        <div class="lg:ml-4 relative top-[-120px]">
+            <div class="relative flex items-end justify-between gap-6">
+                <div class="p-7 flex flex-col items-center justify-between bg-white relative w-[300px] h-[250px]">
+                    <div class="text-center">
+                        <h2 class="font-semibold text-2xl pb-5">Study at Goldsmith</h2>
+                        <p class="text-center text-md pb-4">Explore our guide to studying at Goldsmiths.</p>
+                    </div>
+                    <div class="relative w-full flex items-center justify-between px-3 py-2 border-t border-black">
+                        <a href="#" class="text-sm text-blue-500">Studying at Goldsmith</a>
+                        <i class="uil uil-arrow-right cursor-pointer text-2xl"></i>
+                    </div>
+                </div>
+
+                <div class="p-7 flex flex-col items-center relative justify-between bg-white w-[300px] h-[370px]">
+                    <div class="text-center">
+                        <h2 class="font-semibold text-2xl pb-5">Goldsmiths, University of London</h2>
+                        <p class="text-center text-md pb-4">With world-leading research and high-quality teaching, we offer undergraduate and postgraduate degrees in the arts, humanities, social sciences, business, and computing from our campus in South East London.</p>
+                    </div>
+                    <div class="relative w-full flex items-center justify-between px-3 py-2 border-t border-black">
+                        <a href="#" class="text-sm text-blue-500">About Goldsmith</a>
+                        <i class="uil uil-arrow-right cursor-pointer text-2xl"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="relative lg:w-[640px] mt-4">
+                <img src="./images/student2.jpeg" class="relative w-full">
+                <div class="p-7 flex flex-col items-center justify-between bg-white absolute right-0 bottom-4 w-[300px] h-[180px]">
+                    <div class="text-center">
+                        <p class="text-center text-md pb-4 font-semibold">Explore our range of scholarships, bursaries and fee waivers that can help support your studies</p>
+                    </div>
+                    <div class="relative w-full flex items-center justify-between px-3 py-2 border-t border-black">
+                        <a href="#" class="text-sm text-blue-500">Scholaship finder</a>
+                        <i class="uil uil-arrow-right cursor-pointer text-2xl"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
