--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <section class="flex items-center justify-between px-3 py-4 md:px-10 md:py-10 lg:px-16 lg:py-6">
         <img src="./images/logo.svg" class="w-24 md:w-32 lg:w-44">
         <div class="block md:hidden">
-            <i class="uil uil-graduation-cap text-2xl cursor-pointer px-2"></i>
-            <i class="uil uil-bars text-2xl cursor-pointer px-2"></i>
-            <i class="uil uil-search text-2xl cursor-pointer px-2"></i>
+            <i class="px-2 text-2xl cursor-pointer uil uil-graduation-cap"></i>
+            <i class="px-2 text-2xl cursor-pointer uil uil-bars"></i>
+            <i class="px-2 text-2xl cursor-pointer uil uil-search"></i>
         </div>
         <div class="hidden md:block">
             <nav class="flex items-center justify-center gap-3 lg:gap-14">
-                <img src="./images/charm-menu-staff-students.svg" class="w-14 md:w-44 cursor-pointer duration-200">
-                <img src="./images/charm-menu-search.svg" class="w-14 md:w-24 cursor-pointer duration-200">
-                <img src="./images/charm-menu.svg" class="w-14 md:w-20 cursor-pointer duration-200">
+                <img src="./images/charm-menu-staff-students.svg" class="duration-200 cursor-pointer w-14 md:w-44">
+                <img src="./images/charm-menu-search.svg" class="duration-200 cursor-pointer w-14 md:w-24">
+                <img src="./images/charm-menu.svg" class="duration-200 cursor-pointer w-14 md:w-20">
             </nav>
         </div>
     </section>
@@ -35,13 +35,13 @@
     <section class="relative w-full h-[600px] bg-orange-600">
         <div class="absolute top-10 left-5 md:top-32 md:left-40">
             <div class="w-[50px] h-1 bg-white mb-6"></div>
-            <h1 class="font-bold text-white font-bannerFont text-3xl md:text-6xl pb-4">
+            <h1 class="pb-4 text-3xl font-bold text-white font-bannerFont md:text-6xl">
                 Dynamic <br> learning, <br>
                 <span class="font-medium">distinctive <br> experience</span>
             </h1>
-            <button class="mt-3 py-2 px-3 text-sm md:text-md md:py-4 md:px-7 bg-white  border-b-4 border-black cursor-pointer">Find out more obout postgraduate study</button>
+            <button class="px-3 py-2 mt-3 text-sm bg-white border-b-4 border-black cursor-pointer md:text-md md:py-4 md:px-7">Find out more obout postgraduate study</button>
         </div>
-        <div class="relative w-full flex flex-col md:flex-row items-center justify-between h-full">
+        <div class="relative flex flex-col items-center justify-between w-full h-full md:flex-row">
             <div class="relative">
                 <img src="./images/banner-outline.png" class="relative w-full">
             </div>
@@ -49,17 +49,17 @@
         </div>
     </section>
 
-    <section class="md:px-16 md:py-10 flex flex-col md:flex-row items-start">
+    <section class="flex flex-col items-start md:px-16 md:py-10 md:flex-row">
         <div class="relative flex flex-col items-center">
             <img src="./images/student1.jpeg" class="md:w-[550px] md:h-[400px] object-cover object-center cursor-pointer">
             <div class="p-7 flex flex-col items-center justify-between bg-white relative top-[-30px] w-[450px] h-[260px]">
                 <div class="text-center">
-                    <h2 class="font-semibold text-2xl pb-5">Live like a local</h2>
-                    <p class="text-center text-md pb-4">Find out more life in our campus, including accomodation information and local area hint and tips.</p>
+                    <h2 class="pb-5 text-2xl font-semibold">Live like a local</h2>
+                    <p class="pb-4 text-center text-md">Find out more life in our campus, including accomodation information and local area hint and tips.</p>
                 </div>
-                <div class="relative w-full flex items-center justify-between px-3 py-2 border-t border-black">
+                <div class="relative flex items-center justify-between w-full px-3 py-2 border-t border-black">
                     <a href="#" class="text-sm text-blue-500">Discover more about life on campus</a>
-                    <i class="uil uil-arrow-right cursor-pointer text-2xl"></i>
+                    <i class="text-2xl cursor-pointer uil uil-arrow-right"></i>
                 </div>
             </div>
         </div>
@@ -67,23 +67,23 @@
             <div class="relative flex items-end justify-between gap-6">
                 <div class="p-7 flex flex-col items-center justify-between bg-white relative w-[300px] h-[250px]">
                     <div class="text-center">
-                        <h2 class="font-semibold text-2xl pb-5">Study at Goldsmith</h2>
-                        <p class="text-center text-md pb-4">Explore our guide to studying at Goldsmiths.</p>
+                        <h2 class="pb-5 text-2xl font-semibold">Study at Goldsmith</h2>
+                        <p class="pb-4 text-center text-md">Explore our guide to studying at Goldsmiths.</p>
                     </div>
-                    <div class="relative w-full flex items-center justify-between px-3 py-2 border-t border-black">
+                    <div class="relative flex items-center justify-between w-full px-3 py-2 border-t border-black">
                         <a href="#" class="text-sm text-blue-500">Studying at Goldsmith</a>
-                        <i class="uil uil-arrow-right cursor-pointer text-2xl"></i>
+                        <i class="text-2xl cursor-pointer uil uil-arrow-right"></i>
                     </div>
                 </div>
 
                 <div class="p-7 flex flex-col items-center relative justify-between bg-white w-[300px] h-[370px]">
                     <div class="text-center">
-                        <h2 class="font-semibold text-2xl pb-5">Goldsmiths, University of London</h2>
-                        <p class="text-center text-md pb-4">With world-leading research and high-quality teaching, we offer undergraduate and postgraduate degrees in the arts, humanities, social sciences, business, and computing from our campus in South East London.</p>
+                        <h2 class="pb-5 text-2xl font-semibold">Goldsmiths, University of London</h2>
+                        <p class="pb-4 text-center text-md">With world-leading research and high-quality teaching, we offer undergraduate and postgraduate degrees in the arts, humanities, social sciences, business, and computing from our campus in South East London.</p>
                     </div>
-                    <div class="relative w-full flex items-center justify-between px-3 py-2 border-t border-black">
+                    <div class="relative flex items-center justify-between w-full px-3 py-2 border-t border-black">
                         <a href="#" class="text-sm text-blue-500">About Goldsmith</a>
-                        <i class="uil uil-arrow-right cursor-pointer text-2xl"></i>
+                        <i class="text-2xl cursor-pointer uil uil-arrow-right"></i>
                     </div>
                 </div>
             </div>
@@ -91,13 +91,32 @@
                 <img src="./images/student2.jpeg" class="relative w-full">
                 <div class="p-7 flex flex-col items-center justify-between bg-white absolute right-0 bottom-4 w-[300px] h-[180px]">
                     <div class="text-center">
-                        <p class="text-center text-md pb-4 font-semibold">Explore our range of scholarships, bursaries and fee waivers that can help support your studies</p>
+                        <p class="pb-4 font-semibold text-center text-md">Explore our range of scholarships, bursaries and fee waivers that can help support your studies</p>
                     </div>
-                    <div class="relative w-full flex items-center justify-between px-3 py-2 border-t border-black">
+                    <div class="relative flex items-center justify-between w-full px-3 py-2 border-t border-black">
                         <a href="#" class="text-sm text-blue-500">Scholaship finder</a>
-                        <i class="uil uil-arrow-right cursor-pointer text-2xl"></i>
+                        <i class="text-2xl cursor-pointer uil uil-arrow-right"></i>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="px-5 py-6 md:px-20 md:py-12"> 
+        <div class="flex items-center justify-start gap-6">
+            <img src="./images/icon-search.svg">
+            <div>
+                <h3 class="text-xl font-semibold">Search:</h3>
+                <form class="relative flex gap-6">
+                    <div class="relative flex items-center justify-start gap-3">
+                        <input type="radio" id="option1" class="w-4 h-4" name="group" checked>
+                        <p class="text-lg font-semibold">Degrees</p>
+                    </div>
+                    <div class="relative flex items-center justify-start gap-3">
+                        <input type="radio" id="option2" class="w-4 h-4" name="group" value="option2">
+                        <p class="text-lg font-semibold">Website</p><br>
+                    </div>
+                </form>
             </div>
         </div>
     </section>
