--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
 
-    <section class="flex flex-col items-start md:px-16 md:py-10 md:flex-row">
+    <section class="flex flex-col items-start md:px-16 md:pt-10 md:flex-row">
         <div class="relative flex flex-col items-center">
             <img src="./images/student1.jpeg" class="md:w-[550px] md:h-[400px] object-cover object-center cursor-pointer">
             <div class="p-7 flex flex-col items-center justify-between bg-white relative top-[-30px] w-[450px] h-[260px]">
@@ -102,10 +102,10 @@
         </div>
     </section>
 
-    <section class="px-5 py-6 md:px-20 md:py-12"> 
-        <div class="flex items-center justify-start gap-6">
+    <section class="px-5 py-6 md:px-20"> 
+        <div class="flex items-start justify-start gap-6">
             <img src="./images/icon-search.svg">
-            <div>
+            <div class="flex flex-col items-start w-full">
                 <h3 class="text-xl font-semibold">Search:</h3>
                 <form class="relative flex gap-6">
                     <div class="relative flex items-center justify-start gap-3">
@@ -117,6 +117,80 @@
                         <p class="text-lg font-semibold">Website</p><br>
                     </div>
                 </form>
+                <div class="relative flex items-center justify-center w-full gap-5 mt-3">
+                    <input type="text" class="relative flex-grow px-4 font-bold border border-black outline-none cursor-pointer h-[60px]" autocomplete="off">
+                    <button class="bg-yellow-400 w-[130px] h-[60px] border-b-4 border-green-950">Search</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="relative flex flex-col items-start justify-between gap-4 px-5 py-6 md:flex-row md:px-20">
+        <div class="relative w-1/2 h-[400px]">
+            <img src="./images/student1.jpeg" class="relative object-cover object-center w-full h-full">
+            <div class="absolute right-0 flex flex-col justify-between h-40 p-4 bg-white w-60 bottom-5">
+                <h2 class="text-lg font-semibold text-center">Research which changes the world</h2>
+                <div class="relative flex items-center justify-between w-full px-3 py-2 border-t border-black">
+                    <a href="#" class="text-sm text-blue-500">Case studies</a>
+                    <i class="text-2xl cursor-pointer uil uil-arrow-right"></i>
+                </div>
+            </div>
+        </div>
+        <div class="flex items-start justify-center w-1/2 gap-4">
+            <div class="relative flex flex-col items-center justify-center w-1/2">
+                <img src="./images/student2.jpeg" class="relative object-cover object-center w-full h-[160px]">
+                <div class="flex flex-col justify-between p-4 bg-white h-64 w-60 bottom-5 relative top-[-10px]">
+                    <h2 class="text-lg font-semibold text-center">Research shapes House of Commons Women and Equalities Committee report on misogyny in music</h2>
+                    <div class="relative flex items-center justify-between w-full px-3 py-2 border-t border-black">
+                        <a href="#" class="text-sm text-blue-500">Misogyny in music</a>
+                        <i class="text-2xl cursor-pointer uil uil-arrow-right"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="relative flex flex-col items-center justify-center w-1/2">
+                <img src="./images/student2.jpeg" class="relative object-cover object-center w-full h-[160px]">
+                <div class="flex flex-col justify-between p-4 bg-white h-64 ex w-60 bottom-5 relative top-[-10px]">
+                    <h2 class="text-lg font-semibold text-center">Major funding for a ground-breaking initiative aimed at redefining our understanding of hearing</h2>
+                    <div class="relative flex items-center justify-between w-full px-3 py-2 border-t border-black">
+                        <a href="#" class="text-sm text-blue-500">£2.2 million funding</a>
+                        <i class="text-2xl cursor-pointer uil uil-arrow-right"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="relative flex flex-col items-start justify-between gap-4 px-5 py-6 md:flex-row md:px-20">
+        <div class="flex items-start justify-center w-1/2 gap-4">
+            <div class="relative flex flex-col items-center justify-center w-1/2">
+                <img src="./images/student2.jpeg" class="relative object-cover object-center w-full h-[160px]">
+                <div class="flex flex-col justify-between p-4 bg-white h-64 w-60 bottom-5 relative top-[-10px]">
+                    <h2 class="text-lg font-semibold text-center">Research shapes House of Commons Women and Equalities Committee report on misogyny in music</h2>
+                    <div class="relative flex items-center justify-between w-full px-3 py-2 border-t border-black">
+                        <a href="#" class="text-sm text-blue-500">Misogyny in music</a>
+                        <i class="text-2xl cursor-pointer uil uil-arrow-right"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="relative flex flex-col items-center justify-center w-1/2">
+                <img src="./images/student2.jpeg" class="relative object-cover object-center w-full h-[160px]">
+                <div class="flex flex-col justify-between p-4 bg-white h-64 ex w-60 bottom-5 relative top-[-10px]">
+                    <h2 class="text-lg font-semibold text-center">Major funding for a ground-breaking initiative aimed at redefining our understanding of hearing</h2>
+                    <div class="relative flex items-center justify-between w-full px-3 py-2 border-t border-black">
+                        <a href="#" class="text-sm text-blue-500">£2.2 million funding</a>
+                        <i class="text-2xl cursor-pointer uil uil-arrow-right"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="relative w-1/2 h-[400px]">
+            <img src="./images/student1.jpeg" class="relative object-cover object-center w-full h-full">
+            <div class="absolute right-0 flex flex-col justify-between h-40 p-4 bg-white w-60 bottom-5">
+                <h2 class="text-lg font-semibold text-center">Research which changes the world</h2>
+                <div class="relative flex items-center justify-between w-full px-3 py-2 border-t border-black">
+                    <a href="#" class="text-sm text-blue-500">Case studies</a>
+                    <i class="text-2xl cursor-pointer uil uil-arrow-right"></i>
+                </div>
             </div>
         </div>
     </section>
